--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,16 +9,27 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hi there! I’m Emily. 
+                        I am a Seattle-based theatre director who doubles as a painter and digital artist. Think a superhero/mild-mannered alter-ego situation. Which is which? You decide. Either way, I’ve been creating art in some way or another all my life.
+                        
+                        I love to experiment with different art mediums and push myself to create something everyday. 
+                        
+                        For more examples of what I do, check out my portfolio, or head over to my social media  (and feel free to give it a follow while you’re at it).
+                    </p>
+                    <p>Instagram: <a class="about-link" href="https://www.instagram.com/emjoyart/" target="_blank">instagram.com/emjoyart</a>
+                    </p>
+                       <p>Facebook: <a class="about-link" href="https://www.facebook.com/emjoyart/" target="_blank">facebook.com/emjoyart</a>
+                       </p>
+                        
+                        <p>For commissions, contact me below:
+                
+                        
+                        </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>~All proceeds from commissions benefit the Treat Fund for Olive, my eternally grumpy black cat~ </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div>
+             
             </div>
         </div>
     </section>
