--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -639,3 +639,11 @@ footer .footer-below {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
 }
+
+.header-image {
+    max-width: 300px;
+}
+
+.display-none {
+    display: none;
+}
