--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -263,32 +263,21 @@ section.success {
     }
 }
 
-/* Flexbox Portfolio Grid */
-@media (min-width: 640px) {
-    .portfolio-flex-grid .portfolio-flex-row {
-      display: flex;
-      flex-flow: row wrap;
-      align-items: stretch;
-      justify-content: space-between;
-    }
-    .portfolio-flex-grid .portfolio-flex-row .portfolio-flex-item {
-      flex: 1 0 49%;
-      max-width: 49%;
-    }
-  }
-  @media (min-width: 960px) {
-    .portfolio-flex-grid .portfolio-flex-row .portfolio-flex-item {
-      flex: 1 0 32%;
-      max-width: 32%;
-    }
-  }
-  /* A large grid might need four columns on widescreen layouts */
-  /* @media (min-width: 1380px) {
-    .portfolio-flex-grid .portfolio-flex-row .portfolio-flex-item {
-      flex: 1 0 23.5%;
-      max-width: 23.5%;
-    }
-  } */
+.portfolio-flex-grid .portfolio-flex-row {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: stretch;
+  justify-content: space-between;
+}
+
+.portfolio-flex-grid .portfolio-flex-row .portfolio-flex-item {
+  flex: 1 0 32%;
+  max-width: 32%;
+    height: auto;
+    overflow: hidden;
+    position: static;
+    box-shadow: 0 0 9px 0px #999;
+}
 
 .btn-outline {
     margin-top: 15px;
@@ -500,4 +489,12 @@ footer .footer-below {
 
 .display-none {
     display: none;
+}
+
+.btn-view-all {
+    display: block;
+    margin: auto;
+    font-size: 20px;
+    width: 130px;
+    text-align: center;
 }
