Add grumpy olive

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-md-5 col-md-offset-1">
                     <p>Hi there! I’m Emily. 
                         I am a Seattle-based theatre director who doubles as a painter and digital artist. Think a superhero/mild-mannered alter-ego situation. Which is which? You decide. Either way, I’ve been creating art in some way or another all my life.
                         
@@ -16,7 +16,7 @@
                         
                         For more examples of what I do, check out my portfolio, or head over to my social media  (and feel free to give it a follow while you’re at it).
                     </p>
-                    <p>Instagram: <a class="about-link" href="https://www.instagram.com/emjoyart/" target="_blank">instagram.com/emjoyart</a>
+                    <p>Instagram: <a class="about-link" href="https://www.instagram.com/emjoyberkley/" target="_blank">instagram.com/emjoyberkley</a>
                     </p>
                        <p>Facebook: <a class="about-link" href="https://www.facebook.com/emjoyart/" target="_blank">facebook.com/emjoyart</a>
                        </p>
@@ -26,8 +26,9 @@
                         
                         </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-5 about-right-column">
                     <p>~All proceeds from commissions benefit the Treat Fund for Olive, my eternally grumpy black cat~ </p>
+                    <img src="/img/grumpy_olive.png" class="olive">
                 </div>
              
             </div>
