--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,6 +3,7 @@
     {% include head.html %}
     <body id="page-top" class="index">
     {% include nav.html %}
+    <div class="spacer"></div>
     {% include portfolio_grid.html %}
 
     {% include footer.html %}
