--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -23,7 +23,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
+    color: #{{ site.color.primary-light }};
 }
 
 a.about-link,
@@ -223,7 +223,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba({{ site.color.primary-rgb }},.9);
+    background: rgba(0,0,0, .4);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -537,4 +537,16 @@ footer .footer-below {
     section.success {
         position: relative;
     }
+}
+
+.btn-success:hover {
+    background-color: #00755c;
+    border-color: #00755c;
+}
+
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus,
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+    color: #{{ site.color.primary-light }};
 }
