Fix portfolio link

--- a/_includes/portfolio_grid_inline.html
+++ b/_includes/portfolio_grid_inline.html
@@ -27,7 +27,7 @@
                 {% endfor %}
             </div>
             {% if site.data.portfolio.size > 9 %}
-                <a href="/portfolio" class="btn btn-success btn-view-all">View all</a>
+                <a href="/portfolio/index.html" class="btn btn-success btn-view-all">View all</a>
             {% endif %}
         </div>
     </section>
