--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/portfolio">Portfolio</a>
+                        <a href="/portfolio/index.html">Portfolio</a>
                     </li>
                     <li class="page-scroll">
                         <a href="/#about">About</a>
