--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
+                        <a href="/">Home</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="/portfolio/index.html">Portfolio</a>
                     </li>
                     <li class="page-scroll">
