Add breakfast foods

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     {% endif %}
 
     {% include footer.html %}
-    {% include modals.html %}
+    {% include modals_inline.html %}
     {% include js.html %}
     </body>
 </html>
