--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+        <div class="container-fluid nav-container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -20,6 +20,12 @@
                     </li>
                     <li class="page-scroll">
                         <a href="/">Home</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="/shop/index.html">Shop</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="https://society6.com/emjoycreates" target="_blank">Society 6</a>
                     </li>
                     <li class="page-scroll">
                         <a href="/portfolio/index.html">Portfolio</a>
