--- a/_includes/modals_inline.html
+++ b/_includes/modals_inline.html
@@ -17,7 +17,7 @@
                         <div class="modal-body">
                             <h2>{{ item.title }}</h2>
                             <hr class="star-primary">
-                            <img src="/img/portfolio/{{ item.image }}" class="img-responsive img-centered" alt="{{ item.title }}">
+                            <img src="/img/portfolio/{{ item.image }}" class="img-responsive img-centered portfolio-image" alt="{{ item.title }}">
                             {% if item.description %}
                                 <p>{{ item.description }}</p>
                             {% endif %}
