--- a/_layouts/shop_originals.html
+++ b/_layouts/shop_originals.html
@@ -4,8 +4,9 @@
     <body id="page-top" class="index">
     {% include nav.html %}
     <div class="spacer"></div>
-    {% include shop.html %}
+    {% include shop_originals.html %}
 
+    {% include shop_modals.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
