Fix all the things

--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -47,3 +47,16 @@
 		</div>
 	</div>
 </section>
+
+
+<script>
+	console.log('Running');
+	document.addEventListener("DOMContentLoaded", function() {
+			const product = new URLSearchParams(window.location.search).get('product');
+			if (product) {
+					const productCapitalized = product.charAt(0).toUpperCase() + product.slice(1)
+					console.log('writing');
+					document.querySelector('#message').value = `Hello, I would like to purchase the original painting for ${productCapitalized}.`;
+			}
+	});
+</script>
