--- a/_layouts/original.html
+++ b/_layouts/original.html
@@ -3,9 +3,8 @@
     {% include head.html %}
     <body id="page-top" class="index">
     {% include nav.html %}
-    <div class="spacer"></div>
-    {% include shop_originals.html %}
 
+    {% include product_info.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
