--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,11 @@
     <!-- Bing Verification -->
     {% if site.bing_verify %}<meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
 
-    <!-- Custom Fonts -->
+    <script src="{{ "/js/splide.min.js" }}"></script>
+    <link rel="stylesheet" href="{{ "/css/splide.min.css" }}">
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" }}">
+
+    <!-- Custom Fonts -->
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
