--- a/_includes/shop.html
+++ b/_includes/shop.html
@@ -10,7 +10,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-5 col-sm-offset-1">
-                    <a href="/shop_originals">
+                    <a href="/shop_originals/index.html">
                         <div class="link-box">
                             Originals
                         </div>
