--- a/_includes/js.html
+++ b/_includes/js.html
@@ -17,6 +17,8 @@
      <script src="{{ "/js/contact_me.js" }}"></script>
     {% endif %}
 
+    <script src="{{ "/js/product_info.js" }}"></script>
+
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/freelancer.js" }}"></script>
 
