--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,9 +16,9 @@
                         
                         For more examples of what I do, check out my portfolio, or head over to my social media  (and feel free to give it a follow while you’re at it).
                     </p>
-                    <p>Instagram: <a class="about-link" href="https://www.instagram.com/emjoyberkley/" target="_blank">instagram.com/emjoyberkley</a>
+                    <p>Instagram: <a class="about-link" href="https://www.instagram.com/emjoycreates/" target="_blank">instagram.com/emjoycreates</a>
                     </p>
-                       <p>Facebook: <a class="about-link" href="https://www.facebook.com/emjoyart/" target="_blank">facebook.com/emjoyart</a>
+                       <p>Facebook: <a class="about-link" href="https://www.facebook.com/emjoycreates/" target="_blank">facebook.com/emjoycreates</a>
                        </p>
                         
                         <p>For commissions, contact me below:
