--- a/_includes/shop.html
+++ b/_includes/shop.html
@@ -9,17 +9,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-5 col-sm-offset-1">
+                <div class="col-12 text-center">
                     <a href="/shop_originals/index.html">
-                        <div class="link-box">
-                            Originals
+                        <div class="btn btn-lg btn-success btn-shop">
+                            ORIGINALS
                         </div>
                     </a>
-                </div>
-                <div class="col-sm-5">
                     <a href="https://society6.com/emjoycreates" target="_blank">
-                        <div class="link-box">
-                            Society 6
+                        <div class="btn btn-lg btn-success btn-shop"> 
+                            PRINTS & MERCH
                         </div>
                     </a>
                 </div>
